# octanezsr-api

./: Cargo.toml
examples/: events.rs  games.rs  matches.rs  players.rs  records.rs  teams.rs
src/: api.rs  client.rs  error.rs  lib.rs  types.rs
src/api/: client.rs  common.rs  endpoint.rs  error.rs  events.rs  games.rs  matches.rs  pagination.rs  players.rs  query.rs  records.rs  stages.rs  stats.rs  teams.rs  utils.rs
src/api/events/: event.rs  list_events.rs  matches.rs  participants.rs
src/api/games/: game.rs  list_games.rs
src/api/matches/: games.rs  list_matches.rs  match_mod.rs
src/api/players/: list_players.rs  player.rs
src/api/records/: games.rs  players.rs  series.rs  teams.rs
src/api/stats/: players.rs  teams.rs
src/api/stats/players/: events.rs  opponents.rs  teams.rs
src/api/stats/teams/: events.rs  opponents.rs
src/api/teams/: list_active_teams.rs  list_teams.rs  team.rs
