[package]
name = "octanezsr-api"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Caldwell <saintdev@gmail.com>"]
description = "A wrapper for the Octane.gg ZSR API"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bytes = "1.2.1"
derive_builder = "0.11.2"
futures = "0.3.24"
http = "0.2.8"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
serde_repr = "0.1.9"
form_urlencoded = "1.1.0"
thiserror = "1.0.37"
url = { version = "2.3.1", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.1"
anyhow = "1.0.66"
